# sandbox

./: README.md  motion_filter.py
pcl_tests/: CMakeLists.txt  mainpage.dox  manifest.xml
pcl_tests/src/: align_mh_to_kinect.cpp  face_detection.cpp  makehuman_alignment.cpp  template_alignment.cpp
